[gd_scene load_steps=11 format=2]

[ext_resource path="res://Img/FrenR/upperarm.png" type="Texture" id=1]
[ext_resource path="res://Img/FrenR/forearm.png" type="Texture" id=2]
[ext_resource path="res://Img/FrenR/head.png" type="Texture" id=3]
[ext_resource path="res://Img/FrenR/body.png" type="Texture" id=4]
[ext_resource path="res://FrenR.gd" type="Script" id=5]
[ext_resource path="res://Img/msk.png" type="Texture" id=6]
[ext_resource path="res://Font/font.ttf" type="DynamicFontData" id=7]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 27, 10 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 28.0
height = 8.0

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 7 )

[node name="FrenR" type="RigidBody2D"]
modulate = Color( 0.75, 0.75, 0.75, 1 )
collision_layer = 2
collision_mask = 2
gravity_scale = 8.0
script = ExtResource( 5 )

[node name="Jacket3" type="ColorRect" parent="."]
margin_right = 1.0
margin_bottom = 500.0
color = Color( 0.513726, 0.796078, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jacket" type="ColorRect" parent="."]
margin_left = -21.0
margin_top = -2.0
margin_right = -4.0
margin_bottom = 25.0
rect_rotation = 340.6
rect_pivot_offset = Vector2( 19.75, 0 )
color = Color( 0.513726, 0.796078, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Jacket2" type="ColorRect" parent="."]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 27.0
rect_rotation = 15.5
color = Color( 0.513726, 0.796078, 0.784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Polygons" type="Node2D" parent="."]
position = Vector2( 0, 11.898 )
scale = Vector2( 0.4, 0.4 )

[node name="Chest" type="Polygon2D" parent="Polygons"]
position = Vector2( -72.5, -75.0001 )
texture = ExtResource( 4 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( -11.4833, -15.7895, 141.148, -6.69857, 144.019, 115.311, -16.2679, 120.096 )
uv = PoolVector2Array( -11.4833, -15.7895, 141.148, -6.69857, 144.019, 115.311, -16.2679, 120.096 )
polygons = [ PoolIntArray( 3, 2, 1, 0 ) ]
bones = [ NodePath("Hip"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Hip/Chest/Neck"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm/Forearm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm/Forearm/Wrist"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="Head" type="Polygon2D" parent="Polygons"]
position = Vector2( -117.672, -250.086 )
texture = ExtResource( 3 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( -22.8448, -15.0862, 213.793, -22.4138, 218.966, 213.793, -32.3276, 200.431 )
uv = PoolVector2Array( -22.8448, -15.0862, 213.793, -22.4138, 218.966, 213.793, -32.3276, 200.431 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
bones = [ NodePath("Hip"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Neck"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Hip/Chest/Neck/Head"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Hip/Chest/Arm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm/Forearm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm/Forearm/Wrist"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="Forearm" type="Polygon2D" parent="Polygons"]
position = Vector2( 29.1092, -59.1242 )
texture = ExtResource( 2 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( 3.19148, -3.19149, 190.426, -4.78723, 194.149, 73.4043, -8.51064, 69.6808 )
uv = PoolVector2Array( 3.19148, -3.19149, 190.426, -4.78723, 194.149, 73.4043, -8.51064, 69.6808 )
polygons = [ PoolIntArray( 15, 14, 13, 12, 11, 10, 9, 8, 7, 19, 18, 17, 16 ), PoolIntArray( 0, 1, 2, 3 ) ]
bones = [ NodePath("Hip"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Neck"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm/Forearm"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Hip/Chest/Arm/Forearm/Wrist"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="Arm" type="Polygon2D" parent="Polygons"]
position = Vector2( -35.4787, -59.3195 )
texture = ExtResource( 1 )
skeleton = NodePath("../../Skeleton2D")
polygon = PoolVector2Array( -16.4894, -15.4255, 176.596, 1.06383, 160.106, 85.6383, -17.0213, 66.4894 )
uv = PoolVector2Array( -16.4894, -15.4255, 176.596, 1.06383, 160.106, 85.6383, -17.0213, 66.4894 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ), PoolIntArray( 4, 3, 0, 8 ), PoolIntArray( 4, 5, 6, 7, 8 ) ]
bones = [ NodePath("Hip"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Neck"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm"), PoolRealArray( 1, 1, 1, 1 ), NodePath("Hip/Chest/Arm/Forearm"), PoolRealArray( 0, 0, 0, 0 ), NodePath("Hip/Chest/Arm/Forearm/Wrist"), PoolRealArray( 0, 0, 0, 0 ) ]

[node name="Skeleton2D" type="Skeleton2D" parent="."]
position = Vector2( 0, 11.898 )
scale = Vector2( 0.4, 0.4 )

[node name="Hip" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D( 1, 0, 0, 1, 0, 0 )
default_length = 50.0

[node name="Chest" type="Bone2D" parent="Skeleton2D/Hip"]
position = Vector2( 0, -42.5 )
rest = Transform2D( 1, 0, 0, 1, 0, -42.5 )

[node name="Neck" type="Bone2D" parent="Skeleton2D/Hip/Chest"]
position = Vector2( -4.76837e-07, -17.5 )
rest = Transform2D( 1, 0, 0, 1, -4.76837e-07, -17.5 )

[node name="Arm" type="Bone2D" parent="Skeleton2D/Hip/Chest"]
position = Vector2( -60, 10.255 )
rest = Transform2D( 1, 0, 0, 1, -7.77159, 12.2558 )
default_length = 50.0

[node name="Forearm" type="Bone2D" parent="Skeleton2D/Hip/Chest/Arm"]
position = Vector2( 108.938, 0.509768 )
rest = Transform2D( 1, 0, 0, 1, 60, 0 )

[node name="Wrist" type="Bone2D" parent="Skeleton2D/Hip/Chest/Arm/Forearm"]
position = Vector2( 82.5, 10 )
rest = Transform2D( 1, 0, 0, 1, 82.5, 10 )

[node name="Hand" type="KinematicBody2D" parent="."]
position = Vector2( -16.4934, -0.255127 )
z_index = 1
collision_layer = 4
collision_mask = 0

[node name="HandHitbox" type="CollisionShape2D" parent="Hand"]
position = Vector2( 26.6765, 0.611717 )
shape = SubResource( 4 )

[node name="Hand2" type="KinematicBody2D" parent="Hand"]
position = Vector2( 53.0158, -2.65079 )
z_index = 1
collision_layer = 4
collision_mask = 0

[node name="HandHitbox2" type="CollisionShape2D" parent="Hand/Hand2"]
position = Vector2( 26.6765, 0.611717 )
shape = SubResource( 4 )

[node name="HeadArea" type="Area2D" parent="."]
position = Vector2( -3.5, -44 )

[node name="HeadHitbox" type="CollisionShape2D" parent="HeadArea"]
shape = SubResource( 2 )

[node name="Cam" type="Camera2D" parent="."]
position = Vector2( -18.7996, -5.10205 )
offset = Vector2( 0, -128 )
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Announcement" type="Label" parent="UI"]
margin_left = 692.0
margin_top = 329.0
margin_right = 844.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 3 )
text = "asdfasdf"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BodyHitbox" type="CollisionPolygon2D" parent="."]
position = Vector2( 0, 19.898 )
polygon = PoolVector2Array( -11, 10.102, -19, -12.898, -13, -31.898, -19, -38.898, -28, -52.898, -30, -72.898, -21, -87.898, -2, -94.898, 17, -85.898, 24, -65.898, 19, -45.898, 7, -31.898, 15, -12.898, 9, 10.102 )

[node name="Light" type="Light2D" parent="."]
position = Vector2( 2.20038, 11.8979 )
texture = ExtResource( 6 )
texture_scale = 8.0
color = Color( 0.382477, 0.589844, 0.589844, 1 )
energy = 1.25
shadow_enabled = true
[connection signal="area_entered" from="HeadArea" to="." method="_on_HeadArea_area_entered"]
[connection signal="body_entered" from="HeadArea" to="." method="_on_HeadArea_body_entered"]
